# unifiedui-platform-service

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONCEPT.md  CONTRIBUTING.md  MARKETING.md  RBAC_CONCEPT.md  README.md  SETUP.md  SPONSORS.md  TODO.md  TOOLING.md  VAULT_GUIDE.md  alembic.ini  commitlint.config.js  docker-compose.yml  permissions.xlsx  pyproject.toml  test_tenant_crud.py
.github/: CODEOWNERS  copilot-instructions.md  copilot-instructions.testing.md  dependabot.yml  labeler.yml  testing.copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/codeql/: codeql-config.yml
.github/copilot-instructions/: api-routes.instructions.md  auth-permissions.instructions.md  copilot-instructions.md  database.instructions.md  github-pipelines.instructions.md  handlers.instructions.md  infrastructure.instructions.md  instruction-management.instructions.md  n8n-api.instructions.md  project-structure.instructions.md  security.instructions.md  testing.instructions.md
.github/workflows/: cd-release.yml  ci-pr-branch-check.yml  ci-tests-and-lint.yml  ci.yml  codeql.yml  dependency-review.yml
aihub/: app.py  logger.py  main.py
aihub/apis/v1/: applications.py  auth.py  autonomous_agents.py  chat_widgets.py  conversations.py  credentials.py  custom_groups.py  development_platforms.py  (+5 more)
aihub/caching/: client.py  dependencies.py
aihub/core/: config.py
aihub/database/: client.py  dependencies.py
aihub/docdatabase/: client.py  dependencies.py  example_usage.py
aihub/exc/: applications.py  autonomous_agents.py  chat_widgets.py  conversations.py  credentials.py  development_platforms.py  permissions.py  tags.py
aihub/handlers/: applications.py  autonomous_agents.py  chat_widgets.py  conversations.py  credentials.py  custom_groups.py  development_platforms.py  tags.py  tenants.py
aihub/schema/: keystore.py
aihub/utils/: default_factory_functions.py
alembic/: env.py
alembic/versions/: 001_add_organizations.py  001_initial_schema.py  002_remove_max_tenants_max_users.py  003_tenant_organization_id_non_nullable.py  004_remove_organisation_member_role.py  005_rename_global_admin_remove_org_admin.py  01743198757f_remove_is_pinned_from_conversations_.py  0ee03c5be1e8_refactor_resource_permissions_to_members.py  10cd631f8cb4_drop_supported_widgets_from_chat_agents.py  15a44fdbf615_drop_notifications_table.py  172b16f13007_add_principals_table_and_remove_custom_.py  2577caa35eeb_add_greeting_messages_to_chat_agents.py  2dcb01103929_add_allow_api_keys_to_autonomous_agents.py  34442da57d94_add_chat_widget_and_re_act_agent_user_.py  431e4acb7f58_add_custom_group_creator_permission.py  4891e5353454_add_credential_vault_columns.py  4f15ab679769_add_audit_fields.py  4f1fd1c7855f_refactor_custom_groups_to_three_tables.py  69010a7b316f_change_permission_to_string.py  759ba22ae015_add_development_platforms_tables.py  7a68f0fc2759_resize_uuid_columns_from_varchar100_to_.py  8a3e1b9c2d4f_add_chat_widgets_tables.py  8dec5d126360_initial_schema.py  9023ab8ae861_rename_tenant_roles_to_tenant_principals.py  932c0fb2457a_add_tenant_ai_models_table.py  93cdd1858cc1_change_permission_to_enum.py  96a9b99a62df_add_llm_agent_type_and_direct_chat_purpose.py  a1b2c3d4e5f6_add_observability_tables.py  a3f9c5d7e8b1_add_custom_group_members_table.py  a43927c95366_auto_migration.py  a75f474e1ca6_initial_schema.py  a98a1760f645_add_supported_widgets_to_chat_agents.py  a991b16bd047_initial_schema_with_tenant_members.py  aa47a1a1c134_add_principal_type_to_tenant_roles.py  ab923788c135_initial_schema.py  b2c3d4e5f6a7_drop_audit_logs_table.py  b3834d227094_add_application_type_column.py  b5f2a9c8d3e7_add_is_active_column_to_entities.py  b8c2f1a3d5e7_add_external_app_members_tags_and_ai_model_tags.py  c3d4e5f6a7b8_drop_message_metrics_table.py  (+21 more)
docker/: Dockerfile
docs/: CONCEPT.md  README.md
docs/adr/: 001_MULTI_TENANT_RBAC_ARCHITECTURE.md  002_IDENTITY_PROVIDER_ABSTRACTION.md  003_DUAL_VAULT_ARCHITECTURE.md  004_HANDLER_PATTERN.md  005_CACHING_STRATEGY.md
docs/design/: 001_CASCADE_DELETE_CORS_VAULT.md  002_ORGANIZATION_TENANT_CONCEPT.md  003_TENANT_AI_MODELS_CONCEPT.md
notebooks/: 001_n8n_streaming.ipynb  002_aihub_tests.ipynb
notebooks/devui/: start_dynamic_devui.py
scripts/: cleanup_mssql.py  migrate_reactions_to_feedback.py
tests/: conftest.py  test_api_tenants.py  test_caching.py  test_database.py  test_permissions.py
tests/fixtures/: auth.py  cache.py  client.py  data.py  database.py  vault.py
tests/helpers/: tenant.py
tests/unit/: test_logger.py
unifiedui/: app.py  logger.py
unifiedui/caching/: client.py  dependencies.py  enums.py
unifiedui/core/: config.py
unifiedui/docdatabase/: client.py  dependencies.py  enums.py  example_usage.py
unifiedui/exc/: application_config.py  auth.py  autonomous_agents.py  chat_agent_config.py  chat_agents.py  chat_widgets.py  conversations.py  credentials.py  custom_groups.py  external_app_config.py  external_apps.py  files.py  message_feedback.py  organizations.py  permissions.py  principal.py  re_act_agents.py  tags.py  tenant_ai_models.py  tenants.py  tools.py  workflows.py
unifiedui/handlers/: analytics.py  applications.py  audit_helper.py  auth.py  autonomous_agents.py  cache_utils.py  chat_agents.py  chat_widgets.py  config_suggestions.py  conversations.py  credentials.py  custom_groups.py  dashboard.py  development_platforms.py  external_apps.py  feedback_stats.py  field_filter.py  files.py  foundry_connection.py  message_feedback.py  message_metrics.py  notifications.py  organizations.py  permission_resolver.py  principals.py  principals_helper.py  re_act_agents.py  recent_visits.py  resource_permissions.py  resource_tags.py  search.py  tags.py  tenant_ai_models.py  tenants.py  tools.py  user_favorites.py  workflows.py
unifiedui/schema/: test_connection.py
unifiedui/services/: __init__.py  agent_service_client.py
unifiedui/utils/: api_client.py  api_query.py  dataclasses.py  default_factory_functions.py
unifiedui/vault/: __init__.py
(+486 files in other folders)
