[project]
name = "aihub"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.124.0",
    "redis>=7.1.0",
    "requests>=2.32.5",
    "uvicorn>=0.38.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.9",
    "hvac>=2.4.0",
    "azure-keyvault>=4.2.0",
    "pytest-asyncio>=1.3.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "fakeredis>=2.33.0",
    "pyjwt>=2.8.0",
    "azure-identity>=1.25.1",
]

[tool.setuptools]
packages = ["aihub"]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "httpx>=0.27.0",
    "fakeredis>=2.21.0",
    "mongomock>=4.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = "."
addopts = "-v --cov=aihub --cov-report=html --cov-report=term-missing"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
