[project]
name = "unifiedui"
version = "0.1.0"
description = "unifiedui is a AI management platform."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.124.0",
    "redis>=7.1.0",
    "requests>=2.32.5",
    "uvicorn>=0.38.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.9",
    "hvac>=2.4.0",
    "azure-keyvault>=4.2.0",
    "pytest-asyncio>=1.3.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "fakeredis>=2.33.0",
    "pyjwt>=2.8.0",
    "azure-identity>=1.25.1",
    "openapi-spec-validator>=0.7.0",
]

[tool.setuptools]
packages = ["unifiedui"]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "httpx>=0.27.0",
    "fakeredis>=2.21.0",
    "mongomock>=4.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = "."
addopts = "-v --cov=unifiedui --cov-report=html --cov-report=term-missing"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[dependency-groups]
dev = [
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.2",
]

[tool.ruff]
target-version = "py313"
line-length = 120
src = ["unifiedui", "tests"]
extend-exclude = ["alembic", "notebooks", "htmlcov"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "TC",     # flake8-type-checking
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults (needed for Depends())
    "B904",   # raise-without-from-inside-except (existing codebase pattern)
    "N815",   # mixedCase variable in class scope (Pydantic model_config)
    "RUF012", # mutable-class-default (Pydantic/SQLAlchemy models)
    "SIM105", # suppressible-exception
    "SIM108", # if-else-block-instead-of-if-exp
    "SIM117", # multiple-with-statements
]

[tool.ruff.lint.isort]
known-first-party = ["unifiedui"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011", "N802", "N803", "N806"]
"unifiedui/core/middleware/**" = ["E402"]
"unifiedui/schema/**" = ["TC001", "TC002", "TC003"]
"unifiedui/core/database/models.py" = ["TC001", "TC002", "TC003"]
"tests/conftest.py" = ["E402", "N806"]
